--- a/app/src/main/res/layout/data_main_fragment.xml
+++ b/app/src/main/res/layout/data_main_fragment.xml
@@ -4,11 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".main_data_fragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:id="@+id/column"
+        android:background="#00000000"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:gravity="center"
+        android:orientation="vertical">
+    </LinearLayout>
 
 </FrameLayout>
