--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+<color name="colorPrimary">#008577</color>
+<color name="colorPrimaryDark">#0f0f0f</color>
+<color name="colorAccent">#D81B60</color>
+<color name="black">#000000</color>
+<color name="editText">#777474</color>
+<color name="hint">#545151</color>
+<color name="material_drawer_divider">#1FFFFFFF</color>
+<color name="material_drawer_primary_text">#70FFFFFF</color>
+<color name="textInputLayout">#96ffffff</color>
+
+<color name="appTitleBtnColor">#575454</color>
+
+<color name="cardBgColor">#ffffff</color>
+<color name="tableBgColor">#f5f5f5</color>
+
+<color name="titleItemUnselColor">#000000</color>
+<color name="titleItemSelColor">#dcdcdc</color>
+<color name="abstractItemUnselColor">#5d5d5d</color>
+<color name="btnItemColor">#928e8f</color>
+
+<color name="pageTitleColor">#000000</color>
+<color name="pageContentColor">#222222</color>
+<color name="pagePublisherColor">#878787</color>
+<color name="pageBottomBgColor">#ffffff</color>
+<color name="pageBottomEditBgColor">#ffffff</color>
+<color name="pageBottomEditTextColor">#8b8b8b</color>
+
+<color name="refreshLayoutPrimaryColor">#000</color>
+<color name="refreshLayoutAccentColor">#fff</color>
+<color name="newsRecyclerBgColor">#f6f6f6</color>
+<color name="keywordColor">#000000</color>
+<color name="bigShineColor">#ff6666</color>
+<color name="smallShineColor">#cc9999</color>
+
+<color name="catArrangeTitleColor">#000000</color>
+<color name="catArrangeHintColor">#696969</color>
+<color name="catArrangeTextBgColor">#AAE8E8E8</color>
+<color name="catArrangeDelTextBgColor">#ffffff</color>
+
+<color name="catBgColor">#000000</color>
+<color name="appBarLayoutBgColor">#fafafa</color>
+<color name="catTextColor">#9c9393</color>
+<color name="CollapsingToolbarLayoutScrimColor">#000000</color>
 </resources>
