--- a/app/src/main/res/layout/expert_detail_fragment.xml
+++ b/app/src/main/res/layout/expert_detail_fragment.xml
@@ -15,14 +15,18 @@
 
         <TextView
             android:id="@+id/expert_body_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="30dp"
             android:textColor="@color/design_default_color_on_secondary"
-            android:textSize="40sp"
+            android:autoSizeMaxTextSize="40sp"
             android:textStyle="bold"
+            android:gravity="center_horizontal|center_vertical"
+            android:lineSpacingExtra="8sp"
+            android:textAlignment="center"
+            android:fontFamily="sans-serif-black"
             android:autoSizeTextType="uniform"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -31,67 +35,71 @@
 
         <TextView
             android:id="@+id/expert_body_content"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/pagePublisherColor"
             android:autoSizeTextType="uniform"
+            android:typeface="serif"
             app:layout_constraintTop_toBottomOf="@+id/expert_body_name"
             app:layout_constraintEnd_toStartOf="@+id/expert_body_image"
             app:layout_constraintHorizontal_bias="0.079"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            android:drawableStart="@drawable/job_black"/>
 
         <TextView
             android:id="@+id/expert_body_date"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:autoSizeTextType="uniform"
+            android:typeface="serif"
             android:textColor="@color/pagePublisherColor"
             app:layout_constraintEnd_toStartOf="@+id/expert_body_image"
             app:layout_constraintHorizontal_bias="0.079"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/expert_body_content" />
+            app:layout_constraintTop_toBottomOf="@+id/expert_body_content"
+            android:drawableStart="@drawable/association_black"/>
 
         <TextView
             android:id="@+id/expert_body_url"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:textColor="@color/pagePublisherColor"
-            android:autoSizeTextType="uniform"
+            android:layout_marginTop="0dp"
             android:autoLink="web"
+            android:autoSizeTextType="uniform"
+            android:typeface="serif"
+            android:textColor="@color/pagePublisherColor"
             app:layout_constraintEnd_toStartOf="@+id/expert_body_image"
-            app:layout_constraintHorizontal_bias="0.079"
+            app:layout_constraintHorizontal_bias="0.069"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/expert_body_date" />
+            app:layout_constraintTop_toBottomOf="@+id/expert_body_date"
+            android:drawableStart="@drawable/homepage_black"/>
 
         <ImageView
             android:id="@+id/expert_body_image"
             android:layout_width="119dp"
             android:layout_height="108dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="72dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.897"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toBottomOf="@+id/expert_body_name" />
 
         <TextView
             android:id="@+id/expert_body_source"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:text="@string/blank_news_detail"
             android:textColor="@color/pageContentColor"
-            android:textSize="30sp"
+            android:textSize="18sp"
+            android:lineSpacingExtra="8sp"
+            android:typeface="serif"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
