--- a/app/src/main/res/layout/data_main_fragment.xml
+++ b/app/src/main/res/layout/data_main_fragment.xml
@@ -9,7 +9,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -29,7 +28,8 @@
                         android:id="@+id/spreadBarChart1"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:typeface="serif"/>
 
                 </LinearLayout>
             </LinearLayout>
@@ -48,7 +48,8 @@
                         android:id="@+id/spreadBarChart2"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:typeface="serif"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -66,7 +67,8 @@
                         android:id="@+id/spreadBarChart3"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:typeface="serif"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -84,7 +86,8 @@
                         android:id="@+id/spreadBarChart4"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:typeface="serif"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -102,7 +105,8 @@
                         android:id="@+id/spreadBarChart5"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:typeface="serif"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -120,7 +124,8 @@
                         android:id="@+id/spreadBarChart6"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:typeface="serif"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -138,7 +143,8 @@
                         android:id="@+id/spreadBarChart7"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:typeface="serif"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -156,12 +162,10 @@
                         android:id="@+id/spreadBarChart8"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:typeface="serif"/>
                 </LinearLayout>
             </LinearLayout>
-
-
         </LinearLayout>
     </ScrollView>
-
 </FrameLayout>
