--- a/app/src/main/res/layout/graph_main_fragment.xml
+++ b/app/src/main/res/layout/graph_main_fragment.xml
@@ -20,6 +20,7 @@
         android:id="@+id/expandable_graph_list"
         android:layout_width="match_parent"
         android:layout_height="675dp"
-        android:layout_gravity="bottom" />
+        android:layout_gravity="bottom"
+        android:scrollbars="vertical"/>
 
 </LinearLayout >
