--- a/app/src/main/res/layout/main_draw_header.xml
+++ b/app/src/main/res/layout/main_draw_header.xml
@@ -6,13 +6,12 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="53dp"
-        android:layout_height="64dp"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:src="@drawable/menu_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.097"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@mipmap/cat_list" />
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
