--- a/app/src/main/res/layout/single_expert_layout.xml
+++ b/app/src/main/res/layout/single_expert_layout.xml
@@ -4,56 +4,59 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_marginVertical="7dp"
-    android:layout_marginHorizontal="7dp"
+    android:layout_marginVertical="3dp"
+    android:layout_marginHorizontal="5dp"
     app:cardBackgroundColor="@color/cardBgColor"
-    app:cardElevation="3dp"
-    app:cardCornerRadius="0dp">
+    app:cardElevation="10dp"
+    app:cardCornerRadius="5dp">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
             android:id="@+id/expert_name"
-            android:layout_width="214dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="12dp"
+            android:layout_width="140dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="12dp"
             android:clickable="true"
             android:textColor="#000000"
-            android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:autoSizeTextType="uniform"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/expert_image"/>
 
         <TextView
             android:id="@+id/expert_source"
-            android:layout_width="225dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="16dp"
-            android:textColor="#A1A1A1"
-            android:textSize="12sp"
+            android:layout_width="170dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginBottom="5dp"
+            android:autoSizeTextType="uniform"
             android:drawableStart="@mipmap/job"
+            android:textColor="#A1A1A1"
+            android:typeface="serif"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/expert_image"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/expert_image"
+            android:clickable="true"
             android:layout_width="145dp"
             android:layout_height="123dp"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="10dp"
+            android:contentDescription="TODO"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.939"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/expert_name"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            android:contentDescription="TODO" />
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
